# sg-my-food-recognition

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
scripts/: push_base_model.py
sgmy_food/: __init__.py  cli.py  dataset.py  hub.py  model.py  taxonomy.py  training.py
